--- a/pubs.html
+++ b/pubs.html
@@ -79,10 +79,8 @@
         <span class="bibtex_search_stats badge">0</span>results
       </div>
       <div class="bibtex_structure">
-        <div class="group year" extra="DESC number">
-          <ul>
+        <div class="group year" extra="ASC number">
             <div class="templates"></div>
-          </ul>
           <!-- div class="sort month" extra="DESC date">
                         </div --> 
         	<a href="#top" style="display: inline"><em>(Top
