--- a/pubs.html
+++ b/pubs.html
@@ -79,7 +79,7 @@
         <span class="bibtex_search_stats badge">0</span>results
       </div>
       <div class="bibtex_structure">
-        <div class="group year" extra="ASC number">
+        <div class="group year" extra="DESC number">
             <div class="templates"></div>
           <!-- div class="sort month" extra="DESC date">
                         </div --> 
