--- a/pubs.html
+++ b/pubs.html
@@ -65,8 +65,8 @@
             <option value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization|bidword generation">Natural Language Generation</option>
             <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC">Probabilistic Modelling</option>
             <option value="machine translation|multilingual translation|NMT|SMT|speech translation|speech-to-text translation|speech-to-speech translation">Machine Translation</option>
-            <option value="question answering|machine reading comprehension">Question Answering</option>
-            <option value="information extraction|relation extraction|entity extraction|taxonomy completion">Information Extraction</option>
+            <option value="question answering|machine reading comprehension|reasoning">Question Answering</option>
+            <option value="information extraction|relation extraction|entity extraction|taxonomy completion|exent extraction|entity linking">Information Extraction</option>
             <option value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">Time Series Analysis</option>
             <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|image captioning|video captioning">Visual Understanding</option>
           </select>
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div id="bibtex_display">
-        <div class="bibtex_template" style="display: none;"><li class="if BIBTEXTYPEKEY==ARTICLE || BIBTEXTYPEKEY==INPROCEEDINGS || BIBTEXTYPEKEY==MISC || BIBTEXTYPEKEY==PHDTHESIS || BIBTEXTYPEKEY==MASTERTHESIS || BIBTEXTYPEKEY==BACHELORSTHESIS || BIBTEXTYPEKEY==TECHREPORT || BIBTEXTYPEKEY==BOOK">
+        <div class="bibtex_template" style="display: none;"><li class="if BIBTEXTYPEKEY==ARTICLE || BIBTEXTYPEKEY==INPROCEEDINGS || BIBTEXTYPEKEY==MISC || BIBTEXTYPEKEY==PHDTHESIS || BIBTEXTYPEKEY==MASTERTHESIS || BIBTEXTYPEKEY==BACHELORSTHESIS || BIBTEXTYPEKEY==TECHREPORT || BIBTEXTYPEKEY==BOOK || BIBTEXTYPEKEY=UNPUBLISHED">
             <span class="if thumbnail"><img class="bibtexVar bibtexthumb" src="pubs/+THUMBNAIL+" align="right" extra="thumbnail"/></span>
             <span class="if title"><a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span
