--- a/pubs.html
+++ b/pubs.html
@@ -79,7 +79,7 @@
         <span class="bibtex_search_stats badge">0</span>results
       </div>
       <div class="bibtex_structure">
-        <div class="group year" extra="DESC number">
+        <div class="group year" extra="DESC string">
           <ul>
             <div class="templates"></div>
           </ul>
