--- a/pubs.html
+++ b/pubs.html
@@ -62,13 +62,14 @@
 							bibtex_search" style="border: 1px solid lightgrey;">
             <option value="">Search Topic</option>
             <!-- Add topic values here -->
-            <option value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization|bidword generation">Natural Language Generation</option>
-            <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC">Probabilistic Modelling</option>
-            <option value="machine translation|multilingual translation|NMT|SMT|speech translation|speech-to-text translation|speech-to-speech translation">Machine Translation</option>
-            <option value="question answering|machine reading comprehension|reasoning">Question Answering</option>
+            <option value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization|bidword generation|story generation|story editing">Natural Language Generation</option>
+            <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC|variational inference">Probabilistic Modelling</option>
+            <option value="machine translation|multilingual translation|NMT|SMT|speech translation|speech-to-text translation|speech-to-speech translation|simultaneous translation">Machine Translation</option>
+            <option value="question answering|machine reading comprehension|reasoning|fact verification">Question Answering</option>
             <option value="information extraction|relation extraction|entity extraction|taxonomy completion|exent extraction|entity linking">Information Extraction</option>
             <option value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">Time Series Analysis</option>
             <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|image captioning|video captioning">Visual Understanding</option>
+            <option value="manipulation|grasp pose estimation|construct bridge">Robotics</option>
           </select>
         </div>
         <div style="float:left;"> <input class="bibtex_search form-control" id="searchbar"
