--- a/research.html
+++ b/research.html
@@ -13,16 +13,18 @@
     <div id="layout">
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
+        <li><a href="student.html">Student</a></li>
         <li class="active"><a href="research.html">Research</a></li>
         <li><a href="teaching.html">Teaching</a></li>
-        <li><a href="pubs.html">Publications</a></li>
+        <li><a href="pubs.html">Publication</a></li>
         <li><a href="resource.html">Resource</a></li>
+        <li><a href="media.html">Media</a></li>
         <li><a href="leili-bio.html">Bio</a></li>
       </ul>
       <div class="row">
         <div class="main col">
           <h1>Research Projects</h1>
-          <h2>Intelligent Writing and Deep Text Generation</h2>
+          <h2>Intelligent Writing and Text Generation</h2>
           <ul>
             <li>developing controllable and interpretable methods for effective
               text generation. </li>
