--- a/teaching.html
+++ b/teaching.html
@@ -13,10 +13,12 @@
     <div id="layout">
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
+        <li><a href="student.html">Student</a></li>
         <li><a href="research.html">Research</a></li>
         <li class="active"><a href="teaching.html">Teaching</a></li>
-        <li><a href="pubs.html">Publications</a></li>
+        <li><a href="pubs.html">Publication</a></li>
         <li><a href="resource.html">Resource</a></li>
+        <li><a href="media.html">Media</a></li>
         <li><a href="leili-bio.html">Bio</a></li>
       </ul>
       <div class="row">
