--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -140,7 +140,7 @@
           </td>
           <td>1/10<br />
           </td>
-          <td><a href="03-logistic-regression.pdf">Logistic Regression, Empirical risk minimization</a><br />
+          <td><a href="03-logistic-regression.pdf">Logistic Regression, Cross Entropy</a><br />
           </td>
           <td>Chap 5 of GBC<br />
           </td>
@@ -152,7 +152,7 @@
           </td>
           <td>1/12<br />
           </td>
-          <td>Multilayer Perceptron, Backpropagation<br />
+          <td><a href="04-ffn.pdf">Feedforward Network, Empirical Risk Minimization, Gradient Descent</a><br />
           </td>
           <td><br />
           </td>
@@ -183,7 +183,7 @@
           </td>
           <td>1/19<br />
           </td>
-          <td>Optimization algorithms, Regularization and tricks<br />
+          <td>Optimization algorithms, Backpropagation, Regularization and tricks<br />
           </td>
           <td><br />
           </td>
