--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -129,7 +129,7 @@
           <td><br />
           </td>
           <td>1/5</td>
-          <td>Recitation:</td>
+          <td>Recitation: <a href="week1_recitation1.pdf">slide1</a>, <a href="week1_recitation2.pdf">slides2</a></td>
           <td><br />
           </td>
           <td><br />
@@ -140,7 +140,8 @@
           </td>
           <td>1/10<br />
           </td>
-          <td><a href="03-logistic-regression.pdf">Logistic Regression, Cross Entropy</a><br />
+          <td><a href="03-logistic-regression.pdf">Logistic Regression, Cross
+              Entropy</a><br />
           </td>
           <td>Chap 5 of GBC<br />
           </td>
@@ -152,9 +153,10 @@
           </td>
           <td>1/12<br />
           </td>
-          <td><a href="04-ffn.pdf">Feedforward Network, Empirical Risk Minimization, Gradient Descent</a><br />
+          <td><a href="04-ffn.pdf">Feedforward Network, Empirical Risk
+              Minimization, Gradient Descent</a><br />
           </td>
-          <td><br />
+          <td>Chap 6 of GBC<br />
           </td>
           <td>HW1 due, HW2 out </td>
         </tr>
@@ -162,7 +164,7 @@
           <td><br />
           </td>
           <td>1/12</td>
-          <td>Recitation:</td>
+          <td>Recitation: <a href="week2_recitation1.pdf">slide</a>, <a href="week2_recitation2.pdf">note</a></td>
           <td><br />
           </td>
           <td><br />
@@ -183,7 +185,7 @@
           </td>
           <td>1/19<br />
           </td>
-          <td>Optimization algorithms, Backpropagation, Regularization and tricks<br />
+          <td><a href="05-backprop.pdf">Backpropagation and Autograd</a><br />
           </td>
           <td><br />
           </td>
