--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -207,7 +207,7 @@
           </td>
           <td>1/24<br />
           </td>
-          <td>Convolutional Neural Network</td>
+          <td><a href="06-regularization.pdf"> Evaluation and Regularization </a></td>
           <td><br />
           </td>
           <td><br />
@@ -218,7 +218,7 @@
           </td>
           <td>1/26<br />
           </td>
-          <td>ResNet and other CNN variants </td>
+          <td>Convolutional Neural Network </td>
           <td><br />
           </td>
           <td><br />
@@ -229,7 +229,7 @@
           </td>
           <td>1/31<br />
           </td>
-          <td>Backpropogation for CNNs </td>
+          <td>ResNet and other CNN variants </td>
           <td><br />
           </td>
           <td>HW2 Due, HW3 out </td>
