--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -229,7 +229,7 @@
           </td>
           <td>1/31<br />
           </td>
-          <td>ResNet and other CNN variants </td>
+          <td><a href="08-resnet.pdf"> ResNet and other CNN variants </a> </td>
           <td><br />
           </td>
           <td>HW2 Due, HW3 out </td>
@@ -239,7 +239,7 @@
           </td>
           <td>2/2<br />
           </td>
-          <td>Adagrad, Adam, Momentum<br />
+          <td> Learning for CNN <br />
           </td>
           <td><br />
           </td>
@@ -251,7 +251,7 @@
           </td>
           <td>2/7<br />
           </td>
-          <td>Recurrent Neural Network, Language Modelling<br />
+          <td>More optimization: Adagrad, Adam, Momentum<br />
           </td>
           <td><br />
           </td>
@@ -263,7 +263,7 @@
           </td>
           <td>2/9<br />
           </td>
-          <td>Long-short term memory networks<br />
+          <td>Recurrent Neural Network, Long-short term memory networks<br />
           </td>
           <td><br />
           </td>
