--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -239,7 +239,7 @@
           </td>
           <td>2/2<br />
           </td>
-          <td> Learning for CNN <br />
+          <td><a href="09-learn_cnn.pdf"> Learning for CNN </a><br />
           </td>
           <td><br />
           </td>
