--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -30,7 +30,7 @@
       wants to pursue career in AI or do research in machine learning. </p>
     <h2>Instructor</h2>
     <p><a href="https://www.cs.ucsb.edu/%7Eleili">Lei Li</a> <br />
-      Office Hour: Monday 5-6pm (on <a href="https://ucsb.zoom.us/j/82443832810?pwd=OWI0KzFMZVNKUndpemswdzFHMUFpdz09">zoom</a>)
+      Office Hour: Monday 4-5pm (on <a href="https://ucsb.zoom.us/j/82443832810?pwd=OWI0KzFMZVNKUndpemswdzFHMUFpdz09">zoom</a>)
     </p>
     <h2>Teaching Assistant</h2>
     <ul>
@@ -251,7 +251,7 @@
           </td>
           <td>2/7<br />
           </td>
-          <td>More optimization: Adagrad, Adam, Momentum<br />
+          <td><a href="10-optimization.pdf"> Optimization for ML </a><br />
           </td>
           <td><br />
           </td>
