--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -263,7 +263,7 @@
           </td>
           <td>2/9<br />
           </td>
-          <td>Recurrent Neural Network, Long-short term memory networks<br />
+          <td> <a href="11-detection.pdf"> Object Detection </a><br />
           </td>
           <td><br />
           </td>
@@ -275,7 +275,7 @@
           </td>
           <td>2/14<br />
           </td>
-          <td>Sequence-to-sequence models<br />
+          <td>Recurrent Neural Networks<br />
           </td>
           <td><br />
           </td>
@@ -287,7 +287,7 @@
           </td>
           <td>2/16<br />
           </td>
-          <td>CTC and Sequence Decoding</td>
+          <td>Sequence-to-sequence Models</td>
           <td><br />
           </td>
           <td>HW3 Due, HW4 out </td>
@@ -309,7 +309,7 @@
           </td>
           <td>2/23<br />
           </td>
-          <td>Attention, Transformer </td>
+          <td>Transformer</td>
           <td><br />
           </td>
           <td><br />
@@ -320,7 +320,7 @@
           </td>
           <td>2/28<br />
           </td>
-          <td>Pretraining for NLP</td>
+          <td>NLP Pretraining</td>
           <td><br />
           </td>
           <td><br />
@@ -353,7 +353,7 @@
           </td>
           <td>3/9<br />
           </td>
-          <td>GAN </td>
+          <td>Image Generation and GAN </td>
           <td><br />
           </td>
           <td><br />
