--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
     <meta />
     <meta />
+    <meta />
     <link rel="stylesheet" type="text/css" href="../../style/origo.css" media="all" />
     <meta name="author" content="Lei Li" />
     <title>MLDL</title>
@@ -87,7 +88,7 @@
       carefully!<br />
     </p>
     <h2>Syllabus</h2>
-    <table width="100%" border="0">
+    <table border="0" width="100%">
       <tbody>
         <tr>
           <td>#<br />
@@ -275,7 +276,8 @@
           </td>
           <td>2/14<br />
           </td>
-          <td> <a href="12-recurrent_neural_net.pdf"> Recurrent Neural Networks </a><br />
+          <td> <a href="12-recurrent_neural_net.pdf"> Recurrent Neural Networks
+            </a><br />
           </td>
           <td><br />
           </td>
@@ -309,7 +311,7 @@
           </td>
           <td>2/23<br />
           </td>
-          <td>Transformer</td>
+          <td><a href="14-Transformer.pdf"> Transformer </a> </td>
           <td><br />
           </td>
           <td><br />
@@ -345,7 +347,7 @@
           <td>Autoencoder and VAE </td>
           <td><br />
           </td>
-          <td>HW4 due<br />
+          <td>HW4 due on 3/8<br />
           </td>
         </tr>
         <tr>
