--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -322,7 +322,7 @@
           </td>
           <td>2/28<br />
           </td>
-          <td>NLP Pretraining</td>
+          <td><a href="15-pretraining.pdf"> NLP Pretraining </a> </td>
           <td><br />
           </td>
           <td><br />
