update home page

--- a/media.html
+++ b/media.html
@@ -20,6 +20,7 @@
             <li><a href="resource.html">Resource</a></li>
             <li class="active"><a href="media.html">Media</a></li>
             <li><a href="leili-bio.html">Bio</a></li>
+            <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
         </ul>
       <div class="row">
         <div class="main col">
