--- a/resource.html
+++ b/resource.html
@@ -20,6 +20,7 @@
         <li class="active"><a href="resource.html">Resource</a></li>
         <li><a href="media.html">Media</a></li>
         <li><a href="leili-bio.html">Bio</a></li>
+        <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
       </ul>
       <div class="row">
         <div class="main col">
