--- a/student.html
+++ b/student.html
@@ -20,13 +20,14 @@
             <li><a href="resource.html">Resource</a></li>
             <li><a href="media.html">Media</a></li>
             <li><a href="leili-bio.html">Bio</a></li>
+            <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
         </ul>
       <div class="row">
         <div class="main col">
           <h1> PhD Student </h1>
           <ul>
             <li>Siqi Ouyang</li>
-            <li><a href="https://wuqiuche.github.io">Qiucheng Wu</a> (co-advise with Prof. <a href="https://code-terminator.github.io">Shiyu Chang</a>)</li>
+            <li><a href="">Wenda Xu</a> (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/~william/">William Wang</a>)</li>
             <li><a href="https://xuandongzhao.github.io">Xuandong Zhao</a> (co-advise with Prof. <a href="https://sites.cs.ucsb.edu/~yuxiangw/">Yu-Xiang Wang</a>)</li>
           </ul>
 
