--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="resource.html">Resource</a></li>
         <li><a href="media.html">Media</a></li>
         <li><a href="leili-bio.html">Bio</a></li>
+        <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
       </ul>
       <div class="row">
         <div class="col c2"> <img src="leili-pic1.jpg" alt="" width="160" /> </div>
@@ -60,28 +61,31 @@
           </div>
       </div>
       <div class="row">
-        <div class="main col">
+        <div class="main col" style="overflow-y: scroll; max-height: 16em;">
           <h3>News</h3>
           <ul>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> 7 papers are accepted to ACL 2022 (4 in main and 3 in Findings), about speech translation, document translation, non-autoregressive translation, and representation learning. </li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> Our paper on <a href="https://sites.google.com/view/bridge-pmr">bridge construction robot</a> is accepted to ICRA 2022. </li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> Two papers is accepted to ICLR 2022. about <a href="https://openreview.net/forum?id=OjPmfr9GkVv">multilingual NLP</a> and <a href="https://openreview.net/forum?id=5HvpvYd68b">multilingual translation</a>.   </li>
             <li><img src="images/new-icon.gif" style="height:1.2em" /> Three papers are accepted to AAAI 2022. Topics include <a href="https://arxiv.org/abs/2012.13577">natural language reasoning for fact verification</a>, <a href="https://arxiv.org/abs/2012.13577">unsupervised counterfactual story editing</a>, and <a href="https://arxiv.org/abs/2110.07515">non-autoregressive translation</a>.  </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> The paper on reversible machine translation model is accepted to NeurIPS 2021. Check out <a href="https://arxiv.org/abs/2105.03458">here</a>. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> 6 papers are accepted to EMNLP 2021, three to main confrence, and three to the Findings of EMNLP. The topics are machine translation, information extraction, and summarization.</li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper extending the SOLO framework for instance segmentation is accepted to TPAMI. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper about 3D instance segmentation is accepted to IEEE Robotics and Automation Letters.</li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> Our paper Vocabulary Learning via Optimal Transport for Neural Machine Translation won <span style="color:red">the best paper award</span> at ACL 2021. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> Two papers are accepted to IROS 2021. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper is accepted to InterSpeech 2021, about multi-task progressive pretraining for speech translation, achieving new SOTA results on MuST-C benchmarks. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> Dr. Mingxuan Wang and I will be giving a <a href="TALKS/2021-ACL/">tutorial on Pre-training methods for Neural Machine Translation</a> at ACL 2021, July 31 </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> 11 papers to appear at ACL 2021 (6 long, 4 findings, and 1 system demo). Strong results in machine translation and speech translation. Other topics include parallel generation, reasoning, summarization and information extraction. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> 1 paper is accepted to ICML 2021 about long horizon skill learning. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> 4 papers (1 main and 3 industry) are presenting at NAACL 2021. Check out the long paper about <a href="https://arxiv.org/abs/2009.09654">how visual imagination will influence machine translation capability</a>. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> Four papers on object detection and segmentation are accepted to CVPR 2021, including <a href="https://arxiv.org/abs/2011.12450">Sparse R-CNN</a>, DenseCL, Locate-Segment, Auto-Augment. <a href="https://arxiv.org/abs/2011.09157">DenCL</a> is accepted as Oral.  </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> The paper on finding proper molecules for drug is accepted to ICLR 2021 with the spotlight presentation! </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> Six
+            <li> The paper on reversible machine translation model is accepted to NeurIPS 2021. Check out <a href="https://arxiv.org/abs/2105.03458">here</a>. </li>
+            <li> 6 papers are accepted to EMNLP 2021, three to main confrence, and three to the Findings of EMNLP. The topics are machine translation, information extraction, and summarization.</li>
+            <li> One paper extending the SOLO framework for instance segmentation is accepted to TPAMI. </li>
+            <li> One paper about 3D instance segmentation is accepted to IEEE Robotics and Automation Letters.</li>
+            <li> Our paper Vocabulary Learning via Optimal Transport for Neural Machine Translation won <span style="color:red">the best paper award</span> at ACL 2021. </li>
+            <li> Two papers are accepted to IROS 2021. </li>
+            <li> One paper is accepted to InterSpeech 2021, about multi-task progressive pretraining for speech translation, achieving new SOTA results on MuST-C benchmarks. </li>
+            <li> Dr. Mingxuan Wang and I will be giving a <a href="TALKS/2021-ACL/">tutorial on Pre-training methods for Neural Machine Translation</a> at ACL 2021, July 31 </li>
+            <li> 11 papers to appear at ACL 2021 (6 long, 4 findings, and 1 system demo). Strong results in machine translation and speech translation. Other topics include parallel generation, reasoning, summarization and information extraction. </li>
+            <li> 1 paper is accepted to ICML 2021 about long horizon skill learning. </li>
+            <li> 4 papers (1 main and 3 industry) are presenting at NAACL 2021. Check out the long paper about <a href="https://arxiv.org/abs/2009.09654">how visual imagination will influence machine translation capability</a>. </li>
+            <li> Four papers on object detection and segmentation are accepted to CVPR 2021, including <a href="https://arxiv.org/abs/2011.12450">Sparse R-CNN</a>, DenseCL, Locate-Segment, Auto-Augment. <a href="https://arxiv.org/abs/2011.09157">DenCL</a> is accepted as Oral.  </li>
+            <li> The paper on finding proper molecules for drug is accepted to ICLR 2021 with the spotlight presentation! </li>
+            <li> Six
               papers are accepted to AAAI 2021, about end-to-end speech
               translation, knowledge graph completion, optimization, text
               generation. </li>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper
+            <li> One paper
               about new method to generate query-relevant bidwords for search advertising is accepted to WSDM 2021. </li>
             <li><a href="pubs/wang2020solov2.pdf">SOLOv2</a>
               is out! One paper about faster object instance segmentation in
@@ -127,11 +131,12 @@
               Dunhuang, China. </li>
           </ul>
 
-          <h4>Contact</h4>
-          Email: &lt;my full name&gt; plus  cs.ucsb.edu address.
+          
         </div>
       </div>
       <div id="footer"> <a href="publications.html" style="color: white;">Publications</a>
+        <h4>Contact</h4>
+          Email: &lt;my full name&gt; plus  cs.ucsb.edu address.
         Last updated: $Date:: 2020-05-01#$ by $Author: leili $ </div>
     </div>
     <!-- Start of StatCounter Code for Default Guide -->
