--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -333,7 +333,7 @@
           </td>
           <td>3/2<br />
           </td>
-          <td>Graph Neural Network </td>
+          <td><a href="16-GNN.pdf"> Graph Neural Network </a> </td>
           <td><br />
           </td>
           <td><br />
