--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -344,7 +344,7 @@
           </td>
           <td>3/7<br />
           </td>
-          <td>Autoencoder and VAE </td>
+          <td><a href="17-VAE.pdf" >Autoencoder and VAE </a>  </td>
           <td><br />
           </td>
           <td>HW4 due on 3/8<br />
