--- a/course/mldl22w/index.html
+++ b/course/mldl22w/index.html
@@ -355,7 +355,7 @@
           </td>
           <td>3/9<br />
           </td>
-          <td>Image Generation and GAN </td>
+          <td><a href="18-GAN.pdf"> GAN </a></td>
           <td><br />
           </td>
           <td><br />
@@ -364,7 +364,7 @@
         <tr>
           <td><br />
           </td>
-          <td><br />
+          <td>3/17 12pm<br />
           </td>
           <td>Final Exam<br />
           </td>
