--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <li> Bayesian sampling methods </li>
               </ul>
           </p>
-          <p>Looking for highly motivated students to join my lab. We have PhD positions available starting Fall 2022. </p>
+          <p>Looking for highly motivated students to join my lab. </p>
           <p> UCSB students: please feel free to contact me if you would like to do intern in my lab. </p>
           </div>
       </div>
@@ -174,9 +174,9 @@
                   Dunhuang, China. </li>
               </ul>
             </div>
-          </div>
-          <div class="tab-pane" id="papers">
-            under construction ...
+            <div class="tab-pane" id="papers">
+              under construction ...
+            </div>
           </div>
         </div>
 
