adding nlp career link

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           <div class="tab-content">
             <div class="tab-pane active" id="news">
               <ul>
+                <li>We will hold a Diversity and Inclusion workshop at IJCAI 2022: <a href="nlp-career2022/">How to Grow a Career in NLP?</a> Welcome to attend onsite or virtually. </li>
                 <li><img src="images/new-icon.gif" style="height:1.2em" /> 3 papers are accepted to NAACL 2022 (2 in main and 1
                   in
                   Findings), about speech translation, multilingual text generation, and privacy preserving NLP. </li>
