--- a/teaching.html
+++ b/teaching.html
@@ -26,8 +26,9 @@
         <div class="main col">
           <h1>Teaching</h1>
           <ul>
+            <li><a href="course/ml22fa/index.html">CS291K Machine Learning</a></li>
             <li><a href="course/mldl22w/index.html"> CS165B Machine Learning (Winter 2022) - focus on deep
-              learning</a><br />
+              learning</a>
             </li>
             <li><a href="course/dl4mt21fa/index.html">CS291K Deep Learning for
                 Machine Translation (Fall 2021)</a> </li>
