--- a/pubs.html
+++ b/pubs.html
@@ -66,7 +66,7 @@
             <option value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization|bidword generation|story generation|story editing|story rewriting">Text Generation</option>
             <option value="question answering|machine reading comprehension|reasoning|fact verification">Question Answering</option>
             <option value="information extraction|relation extraction|entity extraction|taxonomy completion|exent extraction|entity linking">Information Extraction</option>
-            <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC|variational inference">Probabilistic Modelling</option>
+            <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC|variational inference">Probabilistic Modelling and Inference</option>
             <option value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">Time Series Analysis</option>
             <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|image captioning|video captioning">Computer Vision</option>
             <option value="manipulation|grasp pose estimation|construct bridge|design and construction">Robotics</option>
@@ -117,20 +117,20 @@
                 aria-expanded="false"
                 aria-controls="bib+BIBTEXKEY+"
                 extra="BIBTEXKEY">Bib</a>
-              <span class="if eprint"><a class="bibtexVar label label-primary" href="+EPRINT+" role="button" extra="eprint">Eprint</a></span>
-              <span class="if url"><a class="bibtexVar label label-warning" href="+URL+" role="button" extra="url">URL</a></span>
+              <span class="if eprint"><a class="bibtexVar label label-warning" href="+EPRINT+" role="button" extra="eprint">Eprint</a></span>
+              <span class="if url"><a class="bibtexVar label label-primary" href="+URL+" role="button" extra="url">URL</a></span>
               <span class="if software"><a class="bibtexVar label label-danger" href="+SOFTWARE+" role="button"
                   extra="software">Software</a></span>
               <span class="if code"><a class="bibtexVar label label-danger" href="+CODE+" role="button" extra="code">Code</a></span>
-              <span class="if slides"><a class="bibtexVar label label-warning" href="+SLIDES+" role="button" extra="slides">Slides</a></span>
+              <span class="if slides"><a class="bibtexVar label label-info" href="+SLIDES+" role="button" extra="slides">Slides</a></span>
               <span class="if abstract">
-              <a class="bibtexVar label label-default" role="button" data-toggle="collapse" href="#abs+BIBTEXKEY+"
+              <a class="bibtexVar label label-light" role="button" data-toggle="collapse" href="#abs+BIBTEXKEY+"
 aria-expanded="false"
 aria-controls="abs+BIBTEXKEY+"
 extra="BIBTEXKEY">Abstract</a>
               </span>
-              <span class="if doi"><a class="bibtexVar label label-default" href="+DOI+" role="button" extra="doi">DOI</a></span>
-              <span class="if video"><a class="bibtexVar label label-info" href="+VIDEO+" role="button" extra="video">
+              <span class="if doi"><a class="bibtexVar label label-secondary" href="+DOI+" role="button" extra="doi">DOI</a></span>
+              <span class="if video"><a class="bibtexVar label label-dark" href="+VIDEO+" role="button" extra="video">
                 <div class="icon"><div class="videoCam"></div></div>
               </a></span>
             </div>
