--- a/pubs.html
+++ b/pubs.html
@@ -117,11 +117,11 @@
                 aria-expanded="false"
                 aria-controls="bib+BIBTEXKEY+"
                 extra="BIBTEXKEY">Bib</a>
-              <span class="if eprint"><a class="bibtexVar label label-warning" href="+EPRINT+" role="button" extra="eprint">Eprint</a></span>
-              <span class="if url"><a class="bibtexVar label label-primary" href="+URL+" role="button" extra="url">URL</a></span>
-              <span class="if software"><a class="bibtexVar label label-danger" href="+SOFTWARE+" role="button"
+              <span class="if eprint"><a class="bibtexVar label label-warning" href="+EPRINT+" role="button" extra="eprint">Eprint</a></span>              
+              <span class="if software"><a class="bibtexVar label label-primary" href="+SOFTWARE+" role="button"
                   extra="software">Software</a></span>
-              <span class="if code"><a class="bibtexVar label label-danger" href="+CODE+" role="button" extra="code">Code</a></span>
+              <span class="if code"><a class="bibtexVar label label-primary" href="+CODE+" role="button" extra="code">Code</a></span>
+              <span class="if url"><a class="bibtexVar label label-danger" href="+URL+" role="button" extra="url">URL</a></span>
               <span class="if slides"><a class="bibtexVar label label-info" href="+SLIDES+" role="button" extra="slides">Slides</a></span>
               <span class="if abstract">
               <a class="bibtexVar label label-light" role="button" data-toggle="collapse" href="#abs+BIBTEXKEY+"
