--- a/pubs.html
+++ b/pubs.html
@@ -123,6 +123,7 @@
               <span class="if code"><a class="bibtexVar label label-primary" href="+CODE+" role="button" extra="code">Code</a></span>
               <span class="if url"><a class="bibtexVar label label-danger" href="+URL+" role="button" extra="url">URL</a></span>
               <span class="if slides"><a class="bibtexVar label label-info" href="+SLIDES+" role="button" extra="slides">Slides</a></span>
+              <span class="if blog"><a class="bibtexVar label label-dark" href="+BLOG+" role="button" extra="blog">Blog</a></span>
               <span class="if abstract">
               <a class="bibtexVar label label-light" role="button" data-toggle="collapse" href="#abs+BIBTEXKEY+"
 aria-expanded="false"
