--- a/pubs.html
+++ b/pubs.html
@@ -4,9 +4,11 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="cache-control" content="no-cache">
     <title> Lei Li's publications </title>
-    <!-- <link href="latofonts.css" rel="stylesheet" type="text/css" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
     <link href="style/style.css" rel="stylesheet" type="text/css" />
     <script src="jquery-3.4.1.min.js"></script>
     <script src="bibtex_js.js" type="text/javascript" charset="utf-8"></script>
@@ -113,25 +115,25 @@
               <span class="if year"><span class="year"></span>.</span> <span class="if addendum">(<span class="addendum"></span>)</span></div>
             <div>
             	<span class="if comment"><div><span class="comment"></span></div></span>
-              <a class="bibtexVar label label-success" role="button" data-toggle="collapse" href="#bib+BIBTEXKEY+"
+              <a class="bibtexVar badge bg-success btn" role="button" data-bs-toggle="collapse" href="#bib+BIBTEXKEY+"
                 aria-expanded="false"
                 aria-controls="bib+BIBTEXKEY+"
                 extra="BIBTEXKEY">Bib</a>
-              <span class="if eprint"><a class="bibtexVar label label-warning" href="+EPRINT+" role="button" extra="eprint">Eprint</a></span>              
-              <span class="if software"><a class="bibtexVar label label-primary" href="+SOFTWARE+" role="button"
+              <span class="if eprint"><a class="bibtexVar badge bg-warning btn" href="+EPRINT+" role="button" extra="eprint">Eprint</a></span>              
+              <span class="if software"><a class="bibtexVar badge bg-primary btn" href="+SOFTWARE+" role="button"
                   extra="software">Software</a></span>
-              <span class="if code"><a class="bibtexVar label label-primary" href="+CODE+" role="button" extra="code">Code</a></span>
-              <span class="if url"><a class="bibtexVar label label-danger" href="+URL+" role="button" extra="url">URL</a></span>
-              <span class="if slides"><a class="bibtexVar label label-info" href="+SLIDES+" role="button" extra="slides">Slides</a></span>
-              <span class="if blog"><a class="bibtexVar label label-dark" href="+BLOG+" role="button" extra="blog">Blog</a></span>
+              <span class="if code"><a class="bibtexVar badge bg-primary btn" href="+CODE+" role="button" extra="code">Code</a></span>
+              <span class="if url"><a class="bibtexVar badge bg-danger btn" href="+URL+" role="button" extra="url">URL</a></span>
+              <span class="if slides"><a class="bibtexVar badge bg-info btn" href="+SLIDES+" role="button" extra="slides">Slides</a></span>
+              <span class="if blog"><a class="bibtexVar badge bg-dark btn text-white" href="+BLOG+" role="button" extra="blog">Blog</a></span>
               <span class="if abstract">
-              <a class="bibtexVar label label-light" role="button" data-toggle="collapse" href="#abs+BIBTEXKEY+"
+              <a class="bibtexVar badge bg-light btn text-dark" role="button" data-bs-toggle="collapse" href="#abs+BIBTEXKEY+"
 aria-expanded="false"
 aria-controls="abs+BIBTEXKEY+"
 extra="BIBTEXKEY">Abstract</a>
               </span>
-              <span class="if doi"><a class="bibtexVar label label-secondary" href="+DOI+" role="button" extra="doi">DOI</a></span>
-              <span class="if video"><a class="bibtexVar label label-dark" href="+VIDEO+" role="button" extra="video">
+              <span class="if doi"><a class="bibtexVar badge bg-secondary btn" href="+DOI+" role="button" extra="doi">DOI</a></span>
+              <span class="if video"><a class="bibtexVar badge bg-dark btn" href="+VIDEO+" role="button" extra="video">
                 <div class="icon"><div class="videoCam"></div></div>
               </a></span>
             </div>
@@ -158,6 +160,6 @@ extra="BIBTEXKEY">Abstract</a>
     <div>
       A slightly old list of <a href="publications.html">publications</a>.
     </div>
-    <script src="bootstrap.min.js"></script>
+    <!-- <script src="bootstrap.min.js"></script> -->
   </body>
 </html>
