--- a/pubs.html
+++ b/pubs.html
@@ -42,7 +42,7 @@
     <a name="top"></a>
     <div class="container">
       <h1 class="header"><a href="index.html">Lei Li</a>'s Publications</h1>
-      <div class="searchbar row">
+      <div class="searchbar">
         <div style="float:left;"> <button type="button" class="btn btn-default"
             onclick="reset()">Reset</button>
         </div>
@@ -79,8 +79,9 @@
             type="text">
           <span class="help-block">Example: text generation (finds the intersection
             of the two terms)</span> </div>
-        <span class="bibtex_search_stats badge">0</span>results
+        <span class="bibtex_search_stats badge bg-light text-danger">0</span>results
       </div>
+      <hr class="w-100">
       <div class="bibtex_structure">
         <div class="group year" extra="DESC string">
           <ul>
