adding emnlp 2022 papers

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
           <div class="tab-content">
             <div class="tab-pane active" id="news">
               <ul>
+                <li><img src="images/new-icon.gif" style="height:1.2em" /> 
+                  New papers at EMNLP 2022: <a href="https://arxiv.org/abs/2210.03312">Model Protection</a>
+                  <a href="https://arxiv.org/abs/2210.03329">Model correction on factual knowledge</a>, 
+                  <a href="https://arxiv.org/abs/2210.05035">Unsupervised Text Generation Metric - SEScore</a>.
+                </li>
                 <li><img src="images/new-icon.gif" style="height:1.2em" /> Our
                   paper on <i>accelerated training of Transformers on GPUs</i>
                   is accepted to SC 2022. The opensource software is released at
