--- a/pubs.html
+++ b/pubs.html
@@ -70,7 +70,7 @@
             <option value="information extraction|relation extraction|entity extraction|taxonomy completion|exent extraction|entity linking">Information Extraction</option>
             <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC|variational inference">Probabilistic Modelling and Inference</option>
             <option value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">Time Series Analysis</option>
-            <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|image captioning|video captioning|vision and language|visual">Computer Vision</option>
+            <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|image captioning|video captioning|vision and language">Computer Vision</option>
             <option value="manipulation|grasp pose estimation|construct bridge|design and construction">Robotics</option>
           </select>
         </div>
